Did some additional refactorings and added tests.